--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,18 @@
 
          <!-- Contact Form -->
 
+         <form action="#" method="post">
+            <label for="fullname">Name</label>
+            <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+            <label for="email">E-mail</label>
+            <input type="text" id="email" name="email" placeholder="your email" required>
+            <label for="phone">Phone</label>
+            <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="10"></textarea>
+            <input type="submit" value="Send">
 
+         </form>
 
       </body>
   </html>
