added CSS style to all pages

--- a/new-properties.html
+++ b/new-properties.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+</head>
+<body>
+  <header>
+    <div id="logo">
+      <h1>Exceptional</h1>
+      <h2>Realty Group</h2>
+    </div>
 
-  <html lang="en">
-
-      <head>
-      <!-- This is a comment in the head of the document. This contains content for browsers and search engines, but will not be viewable. -->
-      <meta charset="UTF-8"> <!-- Character set for HTML5 -->
-      <title>Exceptional Realty Group - Luxury Homes - Listings</title>
-      </head>
+    <nav>
+      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+    </nav>
+  </header>
         
 
       <body> 
