--- a/market-report.html
+++ b/market-report.html
@@ -2,60 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+  <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
 <body>
-  <header>
-    <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-    </div>
+  <div id="social">
+    <a href="#">Twitter</a>
+    <a href="#">Facebook</a>
+    <a href="#">Google Plus</a>
+  </div>
 
-    <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-    </nav>
-  </header>
-        
-
-      <body> 
-
+  <div class="white-wood">
+    <header class="medium-fade shadow">
+      <div class="wrapper">
+        <div id="logo">
           <h1>Exceptional</h1>
           <h2>Realty Group</h2>
+        </div>
+      </div><!-- .wrapper -->
+      <div id="navbar">
+        <div class="wrapper">
+          <nav>
+            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a class="selected" href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a>
+          </nav>
+        </div><!-- .wrapper -->
+      </div><!-- #navbar -->
+    </header>
 
-           <a href="index.html">About </a><a href="new-properties.html">New Properties </a><a href="real-estate-listings.html">Listings </a><a href="market-report.html">Market Report </a><a href="contact.html">Contact </a><a href="http://hud.gov" target="_blank">H.U.D. </a>
+    <div class="wrapper clearfix">
+      <section class="col-3 first shadow">
+        <h3>Market Report</h3>
+        <table>
+          <tr>
+            <th>Address</th>
+            <th>City</th>
+            <th>State</th>
+            <th>Sales Price</th>
+          </tr>
+          <tr>
+            <td>2345 Fairview Ln.</td>
+            <td>Brooklyn</td>
+            <td>NY</td>
+            <td>$1.2 mil</td>
+          </tr>
+          <tr>
+            <td>974 Clapton St.</td>
+            <td>Queens</td>
+            <td>NY</td>
+            <td>$998 k</td>
+          </tr>
+          <tr>
+            <td>14A Belmont Way</td>
+            <td>Bronx</td>
+            <td>NY</td>
+            <td>$874 k</td>
+          </tr>
+        </table>
+      </section>
+    </div><!-- .wrapper -->
+  </div><!-- .white-wood -->
 
-          <h3>Market Report</h3>
+  <section id="details" class="medium-fade">
+    <div class="wrapper clearfix">
+      <div class="col-1 first">
+        <h3>Contact</h3>
+        <p>
+          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+          phone: +1 710 555 1234
+        </p>
+        <h3>Correspondence</h3>
+        <address>
+          Exceptional Realty<br>
+          P.O.Box 5555<br>
+          Brooklyn, NY 11201
+        </address>
+      </div>
 
-          <table>
-              <tr>
-                <th>Address</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Sales Price</th>
-              </tr>
-              <tr>
-                <td>Fake Address 1</td>
-                <td>Fake City</td>
-                <td>Fake State</td>
-                <td>Fake Price</td>
-              </tr>
-              <tr>
-                <td>Fake Address 1</td>
-                <td>Fake City</td>
-                <td>Fake State</td>
-                <td>Fake Price</td>
-              </tr>
-              <tr>
-                <td>Fake Address 1</td>
-                <td>Fake City</td>
-                <td>Fake State</td>
-                <td>Fake Price</td>
-              </tr>
-          </table>
+      <div class="col-1">
+        <h3>Links</h3>
+        <p>
+          <a href="#" target="_blank">Home Restoration</a><br>
+          <a href="#" target="_blank">Afordable Mortgages</a><br>
+          <a href="#" target="_blank">Professional Moving Crew</a>
+        </p>
+      </div>
 
+      <div class="col-1">
+        <h3>Follow</h3>
+        <p>
+          <a href="#" target="_blank">Youtube</a><br>
+          <a href="#" target="_blank">Facebook</a><br>
+          <a href="#" target="_blank">Twitter</a>
+        </p>
+      </div>
+    </div><!-- .wrapper -->
+  </section>
 
-      </body>
-  </html>
+  <footer>
+    &copy; 2014 Exceptional Realty. All Rights Reserved.
+  </footer>
+  
+</body>
+</html>
