--- a/new-properties.html
+++ b/new-properties.html
@@ -2,32 +2,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+  <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
 <body>
-  <header>
-    <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-    </div>
+  <div id="social">
+    <a href="#">Twitter</a>
+    <a href="#">Facebook</a>
+    <a href="#">Google Plus</a>
+  </div>
 
-    <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-    </nav>
-  </header>
-        
-
-      <body> 
-      <!-- The body is the entire viewable area of the web page. -->
+  <div class="white-wood">
+    <header class="medium-fade shadow">
+      <div class="wrapper">
+        <div id="logo">
           <h1>Exceptional</h1>
           <h2>Realty Group</h2>
+        </div>
+      </div><!-- .wrapper -->
+      <div id="navbar">
+        <div class="wrapper">
+          <nav>
+            <a href="index.html">About</a><a class="selected" href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a>
+          </nav>
+        </div><!-- .wrapper -->
+      </div><!-- #navbar -->
+    </header>
+  
+    <div class="wrapper clearfix">
+      <section class="col-3 first shadow">
+        <h3>New Properties</h3>
+      </section>
+    </div><!-- .wrapper -->
+  </div><!-- .white-wood -->
 
-           <a href="index.html">About </a><a href="new-properties.html">New Properties </a><a href="real-estate-listings.html">Listings </a><a href="market-report.html">Market Report </a><a href="contact.html">Contact </a><a href="http://hud.gov" target="_blank">H.U.D. </a>
+  <section id="details" class="medium-fade">
+    <div class="wrapper clearfix">
+      <div class="col-1 first">
+        <h3>Contact</h3>
+        <p>
+          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+          phone: +1 710 555 1234
+        </p>
+        <h3>Correspondence</h3>
+        <address>
+          Exceptional Realty<br>
+          P.O.Box 5555<br>
+          Brooklyn, NY 11201
+        </address>
+      </div>
 
-          <h3>New Properties</h3>
+      <div class="col-1">
+        <h3>Links</h3>
+        <p>
+          <a href="#" target="_blank">Home Restoration</a><br>
+          <a href="#" target="_blank">Afordable Mortgages</a><br>
+          <a href="#" target="_blank">Professional Moving Crew</a>
+        </p>
+      </div>
 
-      </body>
-  </html>
+      <div class="col-1">
+        <h3>Follow</h3>
+        <p>
+          <a href="#" target="_blank">Youtube</a><br>
+          <a href="#" target="_blank">Facebook</a><br>
+          <a href="#" target="_blank">Twitter</a>
+        </p>
+      </div>
+    </div><!-- .wrapper -->
+  </section>
+
+  <footer>
+    &copy; 2014 Exceptional Realty. All Rights Reserved.
+  </footer>
+  
+</body>
+</html>
